# omaai

./: .gitignore  README.md  pyproject.toml
oma/: __init__.py  cli.py  config.py  plugins.py
oma/ai/: __init__.py  engine.py  prompts.py
oma/modules/: __init__.py  automate.py  build.py  explain.py  fix.py  monitor.py  plugin_cmd.py  teach.py
oma/system/: __init__.py  metrics.py
omaai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
plugins/docker/: __init__.py  commands.py  plugin.yaml
plugins/networking/: __init__.py  commands.py  plugin.yaml
plugins/security/: __init__.py  commands.py  plugin.yaml
src/omaai/: ai.py  main.py
src/omaai/commands/: automate.py  explain.py  fix.py  monitor.py  teach.py
