[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omaai"
version = "0.1.0"
description = "OmaAI - AI-powered Linux companion CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "httpx>=0.24.0",
]

[project.scripts]
oma = "omaai.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["omaai*"]
