[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omaai"
version = "0.1.0"
description = "OmaAI — CLI-first AI developer platform for Linux"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "cli", "linux", "automation", "developer-tools"]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "openai>=1.0",
    "anthropic>=0.25",
    "httpx>=0.27",
    "psutil>=5.9",
    "pyyaml>=6.0",
]

[project.scripts]
oma = "oma.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["oma*"]
